Profile header border issue should be addressed only on mobile.
See #2436.

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2193,8 +2193,10 @@ input#group-request-send {
                     border-top: none;
                 }
             }
-            .profile-field-value {
-                border-top: none;
+            @media (max-width: @screen-xs-max){
+                .profile-field-value {
+                    border-top: none;
+                }
             }
         }
     }
